# uni-tasks

cg/praktikum1/: cgv1.html  main.js  render.js
dsv/blatt3/: aufgabe9.m  instrument_example.mat  main.m  makeTone.m  praktikum3_leer.m  signal.m
mmi-gui/: .gdb_history  .gitignore  justfile  meson.build
mmi-gui-qt/P6/: CMakeLists.txt  task2.ui
mmi-gui/praktikum2/: Stack.cpp  Stack.hpp  meson.build  task1.md  task2.cpp  task3.cpp
mmi-gui/praktikum2/praktikum2/: Stack.cpp  Stack.hpp  task3.cpp
mmi-gui/praktikum3/: Volume.cpp  task1.cpp  task3.cpp
mmi-gui/praktikum4/: tasks.cpp
mmi-gui/praktikum5/: OrderedUniqueCollection.h  task1.cpp  task2.cpp
mmi-gui/praktikum6/: NamesList.cpp  NamesList.h  nameslistmain.cpp  rectangle.cpp  rectangle.h  simplearray.h  simplearraymain.cpp  task1.cpp  task2.cpp
mmi-gui/qt-p7/: CMakeLists.txt  main.cpp  mainwindow.ui  person.cpp  person.h  task3.cpp  task3.h
mmi-gui/qt-p8/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
mmi-gui/qt-p9/: .gitignore  CMakeLists.txt  HashTableModel.cpp  HashTableModel.h  HashWorker.cpp  HashWorker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  names.txt  stringhash.cpp  stringhash.h
neuro/praktikum/: Cargo.toml
neuro/praktikum/src/: lib.rs
robotik/praktikum1/: praktikum1.mlx
sz/Blatt3/src/: Main.java
sz/Blatt4/: uml.puml
sz/Blatt4/src/: Main.java
sz/Blatt4/src/symmetricencryption/: SymmetricEncryption.java
sz/Blatt4/src/symmetricencryption/algorithm/: Vigenere.java
sz/Blatt4/src/symmetricencryption/encoding/: ASCIIOffsetEncoding.java  InvalidEncodingException.java  LowercaseLatinEncoding.java  TextEncoding.java  UppercaseLatinEncoding.java
sz/Blatt5/src/: DES.java  Main.java
sz/Blatt6/: pom.xml
sz/Blatt6/src/main/java/org/example/: Main.java  Polynomial.java  PolynomialTest.java
sz/Blatt7/src/: Main.java  RSA.java
sz/blatt1/src/: Main.java
